RESOLVED FIXED 244327
CSSFontFaceSrcValue should use WeakPtr<SVGFontFaceElement> instead of SVGFontFaceElement*
https://bugs.webkit.org/show_bug.cgi?id=244327
Summary CSSFontFaceSrcValue should use WeakPtr<SVGFontFaceElement> instead of SVGFont...
Ryosuke Niwa
Reported 2022-08-25 01:04:28 PDT
Don't store a raw pointer.
Attachments
Ryosuke Niwa
Comment 1 2022-08-25 01:24:34 PDT
EWS
Comment 2 2022-08-25 08:36:41 PDT
Committed 253772@main (a60482d1088a): <https://commits.webkit.org/253772@main> Reviewed commits have been landed. Closing PR #3647 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-08-25 08:37:18 PDT
Note You need to log in before you can comment on or make changes to this bug.