CSSFontFaceSrcValue should use WeakPtr<SVGFontFaceElement> instead of SVGFontFaceElement* https://bugs.webkit.org/show_bug.cgi?id=244327

Reviewed by Chris Dumez.

* Source/WebCore/css/CSSFontFaceSrcValue.cpp:
(WebCore::CSSFontFaceSrcValue::svgFontFaceElement const):
(WebCore::CSSFontFaceSrcValue::setSVGFontFaceElement):
* Source/WebCore/css/CSSFontFaceSrcValue.h:

Canonical link: https://commits.webkit.org/253772@main